<resources>
    <string name="app_name">Catube</string>
    <string name="refresh_tv">Data upload error. Swipe to refresh!</string>
    <string name="unknown_video">Unknown video</string>
    <string name="simple_refresh_tv">Data upload error</string>
    <string name="refresh_button">Try again</string>
    <string name="unknown_duration">0:00</string>
    <string name="video_preview">Video preview</string>
    <string name="duration_builder">Video duration (%1$d:%2$02d:%3$02d)</string>
    <string name="test_mode_text">Test mode (Use video link from resources)</string>
    <string name="test_video">https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
</resources>