<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/rv_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:src="@drawable/cat_stub"
        android:scaleType="centerCrop"
        android:contentDescription="@string/video_preview"
        app:layout_constraintTop_toBottomOf="@id/rv_video_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/rv_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unknown_video"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/rv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_duration"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_image"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
