<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.VideoPlayerFragment">

    <TextView
        android:id="@+id/video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/unknown_video"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.media3.ui.PlayerView
        android:id="@+id/video_player"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_title"
        />

    <TextView
        android:id="@+id/refresh_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_refresh_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh_tv"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/refresh_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="refresh_tv, refresh_button"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/music_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="video_title, video_player"
        />

</androidx.constraintlayout.widget.ConstraintLayout>